add drop shadows and styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="outer-container">
         <div class="inner-container">
-            <div class="calc-area">1234567.890</div>
+            <div class="calc-area">
+                <div class="previous-calc">1234567.89</div>
+                <div class="current-calc">356 + 823</div>
+            </div>
             <div class="keys">
                 <button class="key">AC</button>
                 <button class="key">⌫</button>
