--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -16,18 +17,18 @@
                 <div class="current-calc">356 + 823</div>
             </div>
             <div class="keys">
-                <button class="key">AC</button>
-                <button class="key">⌫</button>
-                <button class="key operand">÷</button>
-                <button class="key operand">×</button>
+                <button class="key del">AC</button>
+                <button class="key del">⌫</button>
+                <button class="key operator">÷</button>
+                <button class="key operator">×</button>
                 <button class="key">7</button>
                 <button class="key">8</button>
                 <button class="key">9</button>
-                <button class="key operand">+</button>
+                <button class="key operator">+</button>
                 <button class="key">4</button>
                 <button class="key">5</button>
                 <button class="key">6</button>
-                <button class="key operand">-</button>
+                <button class="key operator">-</button>
                 <button class="key">1</button>
                 <button class="key">2</button>
                 <button class="key">3</button>
