add initial numeric inputs

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <div class="outer-container">
         <div class="inner-container">
             <div class="calc-area">
-                <div class="previous-calc">1234567.89</div>
-                <div class="current-calc">356 + 823</div>
+                <div data-previous-operand class="previous-calc"></div>
+                <div data-current-operand class="current-calc"></div>
             </div>
             <div class="keys">
-                <button class="key del">AC</button>
-                <button class="key del">⌫</button>
-                <button class="key operator">÷</button>
-                <button class="key operator">×</button>
-                <button class="key">7</button>
-                <button class="key">8</button>
-                <button class="key">9</button>
-                <button class="key operator">+</button>
-                <button class="key">4</button>
-                <button class="key">5</button>
-                <button class="key">6</button>
-                <button class="key operator">-</button>
-                <button class="key">1</button>
-                <button class="key">2</button>
-                <button class="key">3</button>
-                <button class="key enter">=</button>
-                <button class="key zero">0</button>
-                <button class="key">.</button>
+                <button data-clear class="key del">AC</button>
+                <button data-bksp class="key del">⌫</button>
+                <button data-operation class="key operator">÷</button>
+                <button data-operation class="key operator">×</button>
+                <button data-number class="key">7</button>
+                <button data-number class="key">8</button>
+                <button data-number class="key">9</button>
+                <button data-operation class="key operator">+</button>
+                <button data-number class="key">4</button>
+                <button data-number class="key">5</button>
+                <button data-number class="key">6</button>
+                <button data-operation class="key operator">-</button>
+                <button data-number class="key">1</button>
+                <button data-number class="key">2</button>
+                <button data-number class="key">3</button>
+                <button data-enter class="key enter">=</button>
+                <button data-number class="key zero">0</button>
+                <button data-number class="key">.</button>
             </div>
         </div>
     </div>
